# hazel

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: build.yml
docs/: Installing.md
docs/features/: MinifluxProxy.md
docs/features/dashboard/: Index.md
docs/internals/: Adapter.md
etc/hazel/: hazel.conf.template
etc/systemd/system/: hazel.service
scripts/: install.sh  update.sh
scripts/debian/: dependencies.sh
src/: CMakeLists.txt
src/hazel/: Main.cpp
src/hazel/automation/: Adapter.hpp
src/hazel/automation/adapters/: DiscordAdapter.cpp  DiscordAdapter.hpp  NtfyAdapter.cpp  NtfyAdapter.hpp
src/hazel/config/: ConfigState.cpp  ConfigState.hpp  CoreConfig.hpp
src/hazel/config/meta/: Loadable.hpp
src/hazel/config/modules/: MinifluxConfig.hpp
src/hazel/config/system/: User.cpp  User.hpp
src/hazel/data/: DashboardDataProvider.cpp  DashboardDataProvider.hpp  DashboardStructs.hpp  Database.cpp  Database.hpp
src/hazel/data/config/: Admin.hpp  User.hpp
src/hazel/data/dashboard/: DashboardUpdaters.cpp  DashboardUpdaters.hpp
src/hazel/data/db/: Migration.cpp  Migration.hpp
src/hazel/features/: WebCore.cpp  WebCore.hpp
src/hazel/features/miniflux/: MinifluxProxy.cpp  MinifluxProxy.hpp
src/hazel/features/webcore/: Dashboard.cpp  Dashboard.hpp  DashboardModule.hpp
src/hazel/json/: JsonImpl.cpp  SerialiserImpl.hpp
src/hazel/meta/: Macros.hpp  Typedefs.hpp
src/hazel/middlewares/: BaseMiddlewares.cpp  BaseMiddlewares.hpp
src/hazel/server/: Config.hpp  Context.hpp  Hazel.cpp  Hazel.hpp
src/hazel/sync/: RWContainer.hpp
tests/: CMakeLists.txt
tests/src/: DashboardTests.cpp
tests/src/miniflux/: MinifluxProxyTests.cpp
www/: index.mustache  open-source.html
www/assets/: base.js  style.css  tokens.css
www/partials/: base.mustache  footer.mustache  header.mustache
